[package]
name = "replitdb"
version = "0.1.0"
authors = [ "Patrick Winters <19wintersp@gmail.com>" ]
edition = "2018"
description = "A simple Rust client for Replit DB."
readme = "readme.md"
homepage = "https://github.com/19wintersp/Rust-ReplitDB#readme"
repository = "https://github.com/19wintersp/Rust-ReplitDB"
license = "MIT"
license-file = "LICENSE"

[dependencies]
reqwest = { version = "0.11.4", features = [ "blocking", "multipart" ] }
urlencoding = "2.1.0"
